--- a/ET.css
+++ b/ET.css
@@ -6,9 +6,9 @@ body{
     color: #91a3ff;
     font-size: 22px;}
     
-    p{font-size: 30px;}
+    p{font-size: 25px;}
     h1{font-size: 50px;}
-
+    h2{font-size: 35px;}
 
     .index {
         background-color: rgb(145, 163, 255);
@@ -22,4 +22,21 @@ body{
         margin: 4px 2px;
         cursor: pointer;
         border-radius: 10%;
+    }
+
+    .box {
+        background-color: rgb(239, 239, 239);
+        border: none;
+        color: rgb(77, 77, 77);
+        padding: 32px 40px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        border-radius: 10%;
+        height: 700px;
+        width: 400px;
+        align-items: center;
     }
