--- a/index.css
+++ b/index.css
@@ -1,9 +1,9 @@
 body{text-align: center;
-font-family: 'Times New Roman', Times, serif;
-background-image: url(sky.png);
-background-size: cover;
-color: white;
-font-size: 22px;}
+  font-family: 'Times New Roman', Times, serif;
+  background-image: url(sky.png);
+  background-size: cover;
+  color: white;
+  font-size: 22px;}
 
 h1{font-size: 50px;}
 
@@ -34,4 +34,32 @@ h1{font-size: 50px;}
     margin: 4px 2px;
     cursor: pointer;
    border-radius: 10%;}
+
+   ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    width: 150px;
+    background-color: hsl(207, 100%, 86%);
+    float: right;
+    margin-top: -32px;
+    
+  }
+
+  
+  
+  li a {
+    display: block;
+    color: #000000;
+    padding: 8px 16px;
+    text-decoration: none;
+  }
+  
+  /* Change the link color on hover */
+  li a:hover {
+    background-color: #79b8ff;
+    color: white;
+  }
+
 
